--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dayjs": "^1.11.19",
     "gray-matter": "^4.0.3",
     "marked": "^15.0.12",
     "next": "15.5.4",
