[FEAT] - Deployment with scerets

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,19 +1,107 @@
 name: Build and Deploy to GitHub Pages
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to deploy'
+        required: true
+        type: string
+        default: 'master'
 
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
+  verify:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+      pull-requests: read
+    
+    steps:
+      - name: Validate branch input
+        run: |
+          BRANCH="${{ github.event.inputs.branch }}"
+          if [ -z "$BRANCH" ]; then
+            echo "❌ Branch name cannot be empty"
+            exit 1
+          fi
+          echo "Branch to deploy: $BRANCH"
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
+          fetch-depth: 0
+
+      - name: Get user email
+        id: user-email
+        run: |
+          EMAIL=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/user | jq -r '.email // empty')
+          if [ -z "$EMAIL" ]; then
+            EMAIL=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              https://api.github.com/user/emails | jq -r '.[] | select(.primary == true) | .email // .[0].email' | head -1)
+          fi
+          if [ -z "$EMAIL" ]; then
+            EMAIL="${{ github.actor }}@users.noreply.github.com"
+          fi
+          echo "email=$EMAIL" >> $GITHUB_OUTPUT
+          echo "User email: $EMAIL"
+
+      - name: Verify email from secrets
+        id: verify-email
+        run: |
+          AUTHORIZED_EMAIL="${{ secrets.DEPLOYMENT_EMAIL }}"
+          USER_EMAIL="${{ steps.user-email.outputs.email }}"
+          ACTOR_EMAIL="${{ github.actor }}@users.noreply.github.com"
+          
+          echo "Authorized email from secrets: $AUTHORIZED_EMAIL"
+          echo "User email from API: $USER_EMAIL"
+          echo "Actor email: $ACTOR_EMAIL"
+          
+          if [ -z "$AUTHORIZED_EMAIL" ]; then
+            echo "❌ DEPLOYMENT_EMAIL secret is not set. Please set it in repository settings."
+            exit 1
+          fi
+          
+          # Check if user email matches authorized email or actor matches
+          if [ "$USER_EMAIL" = "$AUTHORIZED_EMAIL" ] || [ "$ACTOR_EMAIL" = "$AUTHORIZED_EMAIL" ]; then
+            echo "✅ Email verification passed"
+            echo "verified=true" >> $GITHUB_OUTPUT
+          else
+            echo "❌ Email verification failed. User email does not match authorized email."
+            echo "User: $USER_EMAIL"
+            echo "Authorized: $AUTHORIZED_EMAIL"
+            exit 1
+          fi
+
+      - name: Verify deployment access
+        id: verify-access
+        run: |
+          ACTOR="${{ github.actor }}"
+          echo "Verifying deployment access for: $ACTOR"
+          
+          # Check if user has write access (can be admin, maintain, or write)
+          PERMISSION=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/collaborators/$ACTOR/permission" | \
+            jq -r '.permission // empty')
+          
+          echo "User permission level: $PERMISSION"
+          
+          if [ "$PERMISSION" = "admin" ] || [ "$PERMISSION" = "write" ] || [ "$PERMISSION" = "maintain" ]; then
+            echo "✅ Deployment access verified"
+            echo "access_granted=true" >> $GITHUB_OUTPUT
+          else
+            echo "❌ Insufficient permissions. Required: write, maintain, or admin. Current: $PERMISSION"
+            exit 1
+          fi
+
   build:
+    needs: verify
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -23,6 +111,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -51,7 +141,6 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     permissions:
       pages: write
       id-token: write
@@ -63,3 +152,12 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      
+      - name: Deployment summary
+        run: |
+          echo "## 🚀 Deployment Successful" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Branch**: ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Deployed by**: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Deployment URL**: ${{ steps.deployment.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Commit**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
