Configured next build

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "NODE_ENV=development next dev --turbopack",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint"
   },
