--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./build
 
   deploy:
     needs: build
