--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "marked": "^15.0.12",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
