[REF] - Refactored the applcation to PWA

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "workbench.colorTheme": "Default Dark Modern",
-    "editor.cursorBlinking": "solid",
+    "editor.cursorBlinking": "expand",
     "editor.cursorSmoothCaretAnimation": "on",
     "editor.cursorStyle": "line",
 }
